# wxCL

./: .gitignore  CMakeLists.txt  app.lisp  configura wxcl.txt  inicializa wx y pruebas  init-wxcl.txt  wx-main.lisp
src/cpp/: frame.cpp~  wrapper.cpp  wx_main.cpp
src/include/: frame.h  wrapper.h
